# CONTEXT_FLUX_NO

./: .gitignore  Generator.ipynb  ICONFLUXNO-attention.ipynb  ICONFLUXNO.ipynb  Work_space-Shallow.ipynb  iconfluxno_jax.ipynb  prototype.ipynb  prototype_dpot.ipynb  prototype_encoders.ipynb  pyproject.toml  shallow_water_1D.ipynb  shallow_water_1D_pyclaw.ipynb  testdataset_no_source.pickle  testdataset_no_source_01_5_100_05.pickle  trainingdataset_no_source_narrow.pickle
icon/: TEST.IPYNB  h5loader copy.py  h5loader.py  main.py  pyproject.toml  run.py  run_h5py.py  test_traj_seq.h5
notebooks/data_generation/: burgers_1D.ipynb  cubic_flux_1D.ipynb  cubic_flux_2D.ipynb  shallow_water_1D.ipynb  viscous_burgers_1d.ipynb
notebooks/evaluation/: evalaute_cubic_long_term.ipynb  evaluate_burgers.ipynb  evaluate_cubic.ipynb  evaluate_shallow.ipynb  evaluate_the_well.ipynb  long_term_rollouts.ipynb
notebooks/misc/: ablate_encoders.ipynb  debug_dataloader.py  prototype_dataloading.ipynb
notebooks/nn/: prototype_flux_models.ipynb  relative_position_encoding.ipynb
notebooks/training/: fluxfno_burgers.ipynb  multiphysics_Euler_2d.ipynb  multiphysics_cubic.ipynb  multiphysics_cubic_2d.ipynb  shallow_water_1d.ipynb  viscous_burgers_1d.ipynb
scripts/data/: README.md  generate_cubic.py
scripts/data/configs/: config.yaml
scripts/data/configs/initial_condition/: grf.yaml  grf_2d.yaml  grf_burgers.yaml  grf_shallow.yaml  step.yaml  step_shallow.yaml
scripts/data/configs/pde/: burgers_1d.yaml  cubic_1d.yaml  cubic_2d.yaml  shallow_water_1d.yaml  sine_1d.yaml
scripts/training/: README.md  train_dpot.py  train_incontext_fluxno.py  train_multiphysics.py  train_shallow_water.py  train_the_well.py
scripts/training/configs/: config.yaml
scripts/training/configs/data/: burgers_1d.yaml  cubicflux_1d.yaml  shallow_water_1d.yaml  well_euler_2d.yaml
scripts/training/configs/loss_fn/: denoising.yaml  pushforward.yaml  vanilla.yaml
scripts/training/configs/model/: disco.yaml  disco_2d_euler.yaml  dpot.yaml  dpot_2d_euler.yaml  hyperfluxfno.yaml  hyperfluxfno_local.yaml  hyperfluxno_2d_euler.yaml
scripts/training/configs/training/: default.yaml
src/context_flux_no/: __init__.py  custom_types.py  gaussian_random_field.py  metrics.py  utils.py
src/context_flux_no/data/: __init__.py  sources.py  transforms.py
src/context_flux_no/models/: dpot.py  fluxfno.py  fno.py  hyperfluxfno.py
src/context_flux_no/models/multiphysics/: __init__.py  abstract.py  disco.py  dpot.py  hyperfluxfno.py
src/context_flux_no/models/multiphysics/disco/: __init__.py  attention_blocks.py  disco.py  hypernet.py  operatornet.py
src/context_flux_no/models/multiphysics/hyperfluxfno/: __init__.py  hyperfluxfno.py
src/context_flux_no/models/multiphysics/hyperfluxfno/encoders/: __init__.py  base.py  dpot_encoder.py  trecvit_encoder.py  utils.py  vit_encoder.py
src/context_flux_no/nn/: __init__.py  attention.py  convtranspose.py  drop.py  embedding.py  embedding_old.py  fourier.py  hypernetwork.py  misc.py  position_encoding.py  positional_encoding.py  ssm.py  structured_linear.py  transformer.py  vit.py
src/context_flux_no/nn/hypernetworks/: __init__.py  hyperfourier.py  hyperlinear.py
src/context_flux_no/nn/operators/: __init__.py  adaptivefourier.py  fourier.py  fourier_utils.py
src/context_flux_no/nn/position_encoding/: __init__.py  absolute.py  relative.py
src/context_flux_no/plotting/: __init__.py  lineplots.py
src/context_flux_no/plotting/styles/: __init__.py  dash_gridded.mplstyle
src/context_flux_no/simulations/: pdesolve.py  pyclaw_utils.py  utils.py
src/context_flux_no/simulations/pde/: __init__.py  burgers.py  cubic.py  shallow_water.py  sine_1d.py
src/context_flux_no/training/: __init__.py  batching.py  dataset.py  io.py  loader.py  loss.py  trainer.py
src/context_flux_no/waveforms/: fourier.py  grf.py  step.py
tests/: test_models.py  test_models_disco.py  test_models_dpot.py  test_nn.py  test_nn_misc.py  test_nn_operators.py
