[project]
name = "context-flux-no"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joon-Hyuk Ko", email = "jhko725@kias.re.kr" }
]
requires-python = ">=3.12"
dependencies = [
    "clawpack>=5.12.0",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "scipy>=1.15.3",
]

[project.scripts]
context-flux-no = "context_flux_no:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-include = ["*.ipynb"]
src = []
fix = true

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false
